# ascendant

./: .dev.md  .gitignore  Cargo.toml  README.md
data/: 4x4-puzzles.json  5x5-puzzles.json  6x6-puzzles.json  7x7-puzzles.json  8x8-puzzles.json  grids.json
src/: examples.rs  lib.rs  main.rs  puzzle.rs  readme.md  util.rs  utils.rs
src/cli/: cli.rs  detail.rs  mod.rs
src/fetcher/: dates.rs  difficulty.rs  fetcher.rs  mod.rs
src/puzzle/: cell.rs  clues.rs  grid.rs  mod.rs
src/reader/: exchange.rs  load.rs  mod.rs  save.rs
src/runner/: fetch.rs  mod.rs  solve.rs
src/solver/: core.rs  mod.rs  sequences.rs  skyscrapers.rs  solver.rs  sudoku.rs
src/test/: bulk.rs  mod.rs
src/util/: debug.rs  env.rs  iter.rs  mod.rs
tests/: calc-max-from-peak.rs  examples.rs  grid.rs  mod.rs  solve.rs
tests/grid/: at.rs  construct.rs  look.rs  process.rs  query.rs
tests/solver/: calc_ascending.rs  calc_cands_from_peak.rs  deduce_sequence_in_lane.rs  find_isolates.rs  solve.rs
tests/solver/skyscrapers/: pick_last_in_lane.rs  pick_visible_in_close_lane.rs
tests/solver/sudoku/: find_isolated_groups.rs  isolate_groups_in_lane.rs
tests/util/: mod.rs
