[package]
name = "ascendant"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arrayvec = "0.7.6"
bit-set = "0.8.0"
chromiumoxide = "0.8.0"
futures = "0.3.31"
itertools = "0.14.0"
lazy_static = "1.5.0"
natbitset = "0.1.0"
regex = "1.12.2"
seq-macro = "0.3.6"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = "1.49.0"
workerpool = "1.2.1"
